feat: add shipping options and address collection to checkout session

--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -55,8 +55,8 @@
 
           <p class="success-note">
             Each piece is carefully packaged and fully insured from our base in Ireland.  
-            If you have any questions about your order, reply to your confirmation email or contact us at
-            <a href="mailto:hello@robynandgold.com">hello@robynandgold.com</a>.
+            If you have any questions about your order, please contact us via Instagram DM at
+            <a href="https://www.instagram.com/robynandgold/" target="_blank" rel="noopener">@robynandgold</a>.
           </p>
 
           <div class="success-actions">
