--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -133,23 +133,23 @@
       // Render each cart item
       itemsContainer.innerHTML = cart.map(item => `
         <div class="cart-item" data-id="${item.id}">
-          <img 
-            src="${item.image}" 
-            alt="${item.name}" 
-            class="product-card-image"
-            style="width: 100px; height: 100px; object-fit: cover; border-radius: var(--radius-md);"
-            onerror="this.src='../images/homepage.png'"
-          />
-          <div>
-            <h3 class="product-card-title" style="margin-bottom: 0.3rem;">${item.name}</h3>
-            <p class="product-card-meta" style="margin-bottom: 0.5rem;">${item.era}</p>
-            <p class="product-card-price">${window.ProductsAPI.formatPrice(item.price, item.currency)}</p>
+          <div class="cart-item-image">
+            <img 
+              src="${item.image}" 
+              alt="${item.name}"
+              onerror="this.src='../images/homepage.png'"
+            />
           </div>
-          <div>
-            <button class="remove-item" data-id="${item.id}" style="background: none; border: none; color: var(--muted); text-decoration: underline; cursor: pointer; font-size: 0.85rem;">
-              Remove
-            </button>
+          <div class="cart-item-details">
+            <h3 class="cart-item-title">${item.name}</h3>
+            <p class="cart-item-meta">${item.era}</p>
+            <p class="cart-item-price">${window.ProductsAPI.formatPrice(item.price, item.currency)}</p>
           </div>
+          <button class="cart-item-remove" data-id="${item.id}" aria-label="Remove ${item.name} from cart">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15 5L5 15M5 5L15 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </button>
         </div>
       `).join('');
       
@@ -158,7 +158,7 @@
       subtotalEl.textContent = window.ProductsAPI.formatPrice(total, 'EUR');
       
       // Add remove button listeners
-      document.querySelectorAll('.remove-item').forEach(btn => {
+      document.querySelectorAll('.cart-item-remove').forEach(btn => {
         btn.addEventListener('click', (e) => {
           const productId = e.target.dataset.id;
           window.CartAPI.removeFromCart(productId);
