--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -22,14 +22,22 @@
 <body class="page">
   <header class="site-header">
     <div class="container header-inner">
-            <a href="/" class="brand">
-              <img src="../images/logo.png" alt="Robyn & Gold" class="brand-logo" />
-              <div class="brand-text">
-                <span class="brand-main">Robyn &amp; Gold</span>
-                <span class="brand-tagline">Antique Jewellery</span>
-              </div>
-            </a>
-
+      <div class="brand-banner">
+        <div class="brand-center">
+          <a href="/" class="brand-main">Robyn &amp; Gold</a>
+          <span class="brand-tagline">Antique Jewellery</span>
+        </div>
+        <div class="brand-arc" aria-hidden="true">
+          <span class="arc-mark pos-0"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-1"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-2"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-3"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-4"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-5"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-6"><img src="../images/logo.png" alt="" /></span>
+          <span class="arc-mark pos-7"><img src="../images/logo.png" alt="" /></span>
+        </div>
+      </div>
 
       <nav class="nav">
         <a href="/pages/shop.html" class="nav-link">Shop</a>
