feat: simplify brand display by removing decorative arc and centralizing logo across all pages

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -25,18 +25,9 @@
     <div class="container header-inner">
       <div class="brand-banner">
         <div class="brand-center">
+          <img src="../images/logo.png" alt="Robyn & Gold" />
           <a href="/" class="brand-main">Robyn &amp; Gold</a>
           <span class="brand-tagline">Antique Jewellery</span>
-        </div>
-        <div class="brand-arc" aria-hidden="true">
-          <span class="arc-mark pos-0"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-1"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-2"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-3"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-4"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-5"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-6"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-7"><img src="../images/logo.png" alt="" /></span>
         </div>
       </div>
 
@@ -56,12 +47,13 @@
     <!-- Page hero -->
     <section class="section section--alt">
       <div class="container">
-        <p class="eyebrow">Shop</p>
-        <h1 class="page-title">The collection</h1>
-        <p class="page-intro">
-          A considered edit of antique and vintage rings in solid gold and natural stones.
-          Each piece is one-of-a-kind; once it finds its owner, it is gone.
-        </p>
+        <div class="narrow">
+          <h1 class="page-title">The collection</h1>
+          <p class="page-intro">
+            A considered edit of antique and vintage rings in solid gold and natural stones.
+            Each piece is one-of-a-kind; once it finds its owner, it is gone.
+          </p>
+        </div>
       </div>
     </section>
 
