--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -24,18 +24,9 @@
     <div class="container header-inner">
       <div class="brand-banner">
         <div class="brand-center">
+          <img src="../images/logo.png" alt="Robyn & Gold" />
           <a href="/" class="brand-main">Robyn &amp; Gold</a>
           <span class="brand-tagline">Antique Jewellery</span>
-        </div>
-        <div class="brand-arc" aria-hidden="true">
-          <span class="arc-mark pos-0"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-1"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-2"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-3"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-4"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-5"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-6"><img src="../images/logo.png" alt="" /></span>
-          <span class="arc-mark pos-7"><img src="../images/logo.png" alt="" /></span>
         </div>
       </div>
 
