feat: update shop page intro text for clarity and remove unnecessary section class

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -45,13 +45,11 @@
 
   <main>
     <!-- Page hero -->
-    <section class="section section--alt">
+    <section class="section">
       <div class="container">
         <div class="narrow">
-          <h1 class="page-title">The collection</h1>
           <p class="page-intro">
-            A considered edit of antique and vintage rings in solid gold and natural stones.
-            Each piece is one-of-a-kind; once it finds its owner, it is gone.
+            The collection is a considered edit of antique and vintage rings in solid gold and natural stones. Each piece is one-of-a-kind; once it finds its owner, it is gone.
           </p>
         </div>
       </div>
