feat: implement compact section spacing for cart and shop pages, enhancing layout consistency

--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -43,17 +43,13 @@
   </header>
 
   <main>
-    <section class="section section--alt">
+    <section class="section section--compact">
       <div class="container">
-        <p class="eyebrow">Cart</p>
         <h1 class="page-title">Your chosen pieces</h1>
-        <p class="page-intro">
-          Review your selection before checkout. Each ring is unique; items are not reserved until payment is complete.
-        </p>
       </div>
     </section>
 
-    <section class="section">
+    <section class="section section--compact">
       <div class="container cart-layout">
         <div class="cart-items-wrapper">
           <div id="cart-items" class="cart-items">
