--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -45,18 +45,14 @@
 
   <main>
     <!-- Page hero -->
-    <section class="section">
+    <section class="section section--compact">
       <div class="container">
-        <div class="narrow">
-          <p class="page-intro">
-            The collection is a considered edit of antique and vintage rings in solid gold and natural stones. Each piece is one-of-a-kind; once it finds its owner, it is gone.
-          </p>
-        </div>
+        <!-- Intro removed as requested -->
       </div>
     </section>
 
     <!-- Filters + product grid -->
-    <section class="section">
+    <section class="section section--compact">
       <div class="container shop-layout">
         <aside class="shop-filters" aria-label="Filters">
           <h2 class="filters-title">Refine</h2>
