feat: enhance webhook handler to derive product IDs from line items if not present in metadata

--- a/src/pages/product-detail.html
+++ b/src/pages/product-detail.html
@@ -118,6 +118,12 @@
         document.getElementById('product-detail').innerHTML = '<p>Product not found</p>';
         return;
       }
+
+      // Guard: if the product has been sold, redirect back to the collection
+      if (currentProduct.available === false) {
+        window.location.href = '/pages/shop.html';
+        return;
+      }
       
       // Update page title
       document.title = `${currentProduct.name} — Robyn & Gold`;
