--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -17,7 +17,10 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/png" href="../images/favicon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+  <link rel="manifest" href="/images/site.webmanifest" />
 </head>
 <body class="page">
   <header class="site-header">
