--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -18,7 +18,10 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/png" href="../images/favicon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+  <link rel="manifest" href="/images/site.webmanifest" />
 </head>
 <body class="page">
   <header class="site-header">
@@ -196,6 +199,11 @@
       // Filter by era/period
       if (era) {
         filtered = filtered.filter(p => p.period === era);
+      }
+      
+      // Filter by category
+      if (category) {
+        filtered = filtered.filter(p => (p.category || '').toLowerCase() === category.toLowerCase());
       }
       
       // Sort
