fix: update favicon paths across multiple pages and enhance Instagram link in contact page

--- a/src/pages/product-detail.html
+++ b/src/pages/product-detail.html
@@ -17,23 +17,13 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
-</head>
-<body class="page">
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand-banner">
-        <div class="brand-center">
-          <img src="../images/logo.png" alt="Robyn & Gold" />
-          <a href="/" class="brand-main">Robyn &amp; Gold</a>
-          <span class="brand-tagline">Antique Jewellery</span>
-        </div>
-      </div>
-
-      <nav class="nav">
+          </div>
+          -->
+    </section>
         <a href="/pages/shop.html" class="nav-link">Shop</a>
         <a href="/index.html#about" class="nav-link">Our story</a>
         <a href="/index.html#ethos" class="nav-link">Ethos</a>
