--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -17,8 +17,8 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
 </head>
@@ -74,33 +74,8 @@
         </nav>
       </div>
   </header>
-
-  <main>
-    <section class="section">
-      <div class="container success-layout">
-        <div class="success-card">
-          <p class="eyebrow">Order confirmed</p>
-          <h1 class="page-title">Thank you for choosing Robyn &amp; Gold.</h1>
-          <p class="page-intro">
-            Your order has been received and a confirmation email has been sent with the details.
-            We’ll be in touch shortly with shipping information.
-          </p>
-
-          <p class="success-note">
-            Each piece is carefully packaged and fully insured from our base in Ireland.  
-            If you have any questions about your order, please contact us via Instagram DM at
-            <a href="https://www.instagram.com/robynandgold/" target="_blank" rel="noopener">@robynandgold</a>.
-          </p>
-
-          <div class="success-actions">
-            <a href="/pages/shop.html" class="btn btn-primary">Continue browsing</a>
-            <a href="/index.html#about" class="btn btn-ghost">Read our story</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
+      </nav>
+    </div>
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-brand">
