--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -17,8 +17,8 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
 </head>
@@ -59,6 +59,9 @@
           Send us a DM on Instagram for questions about our collection, sizing, shipping, or care for antique jewellery.
         </p>
       </div>
+        <a href="https://www.instagram.com/robynandgold/" target="_blank" rel="noopener noreferrer" style="color: var(--ink); text-decoration: underline;">
+          @robynandgold
+        </a>
     </section>
 
     <section class="section">
