--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -36,7 +36,7 @@
 
       <nav class="nav">
       </nav>
-        <nav class="nav nav-left" style="flex: 1; justify-content: flex-start;">
+        <nav class="nav nav-left">
           <a href="shop.html" class="nav-link">Shop</a>
           <a href="../index.html#about" class="nav-link">Our story</a>
           <a href="../index.html#ethos" class="nav-link">Ethos</a>
@@ -46,14 +46,14 @@
             </svg>
           </a>
         </nav>
-        <div class="brand-banner" style="flex: 0 0 auto; text-align: center;">
+        <div class="brand-banner">
           <div class="brand-center">
             <img src="../images/logo.png" alt="Robyn & Gold" />
             <a href="/" class="brand-main" style="color: var(--accent-soft);">Robyn &amp; Gold</a>
             <span class="brand-tagline">Antique Jewellery</span>
           </div>
         </div>
-        <nav class="nav nav-right" style="flex: 1; justify-content: flex-end;">
+        <nav class="nav nav-right">
           <a href="cart.html" class="nav-link nav-link--cart" aria-label="Cart">
             <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61l1.38-7.39H6"/></svg>
             <span id="cart-count" class="cart-count">0</span>
