fix: update favicon paths across multiple pages and hide legacy left navigation on home page

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
   />
 
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
 </head>
 <body class="page">
   <header class="site-header">
-      <div style="display: flex; width: 100%; align-items: center; justify-content: space-between;">
+    <div class="container header-inner">
         <nav class="nav nav-left" style="flex: 1; justify-content: flex-start;">
           <a href="pages/shop.html" class="nav-link">Shop</a>
           <a href="#about" class="nav-link">Our story</a>
@@ -92,8 +92,8 @@
           <!-- Products loaded dynamically from /src/data/products.json -->
           <article class="product-card">
             <img
-              src="images/products/victorian-diamond-ring-1890.jpg"
-              alt="Victorian diamond ring"
+              src="images/products/9ct-gold-diamond-crossover-ring-1.png"
+              alt="9ct Gold Diamond Crossover Ring"
               class="product-card-image"
             />
             <div class="product-card-body">
@@ -106,8 +106,8 @@
 
           <article class="product-card">
             <img
-              src="images/products/edwardian-sapphire-cluster-1905.jpg"
-              alt="Edwardian sapphire cluster ring"
+              src="images/products/9ct-gold-diamond-band-1.png"
+              alt="9ct Gold Diamond Band"
               class="product-card-image"
             />
             <div class="product-card-body">
