--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -67,15 +67,13 @@
           </div>
         </div>
         <nav class="nav nav-right" style="flex: 1; justify-content: flex-end;">
-          <a href="/pages/cart.html" class="nav-link nav-link--cart" aria-label="Cart">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61l1.38-7.39H6"/></svg>
+          <a href="/pages/cart.html" class="nav-link nav-link--cart">
+            Cart
             <span id="cart-count" class="cart-count">0</span>
           </a>
         </nav>
       </div>
   </header>
-      </nav>
-    </div>
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-brand">
