--- a/src/pages/product-detail.html
+++ b/src/pages/product-detail.html
@@ -26,20 +26,22 @@
     <header class="site-header">
       <div class="container header-inner">
         <nav class="nav nav-left" aria-label="Primary">
-          <a href="/pages/shop.html" class="nav-link">Shop</a>
-          <a href="/index.html#about" class="nav-link">Our story</a>
-          <a href="/index.html#ethos" class="nav-link">Ethos</a>
+          <a href="shop.html" class="nav-link">Shop</a>
+          <a href="../index.html#about" class="nav-link">Our story</a>
+          <a href="../index.html#ethos" class="nav-link">Ethos</a>
         </nav>
         <div class="brand-banner">
           <div class="brand-center">
-            <img src="../images/logo.png" alt="Robyn & Gold" />
-            <a href="/" class="brand-main">Robyn &amp; Gold</a>
+            <a href="../index.html">
+              <img src="../images/logo.png" alt="Robyn & Gold" />
+            </a>
+            <a href="../index.html" class="brand-main">Robyn &amp; Gold</a>
             <span class="brand-tagline">Antique Jewellery</span>
           </div>
         </div>
 
         <nav class="nav nav-right" aria-label="Utilities">
-          <a href="/pages/cart.html" class="nav-link nav-link--cart" aria-label="Cart">
+          <a href="cart.html" class="nav-link nav-link--cart" aria-label="Cart">
             <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-cart"><path d="M7 4h-2l-1 2h-2v2h2l3.6 7.59-1.35 2.44c-.16 .28-.25 .61-.25 .97 0 1.1.9 2 2 2h12v-2h-11.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.74c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14 .12-.31 .12-.48 0-.55-.45-1-1-1h-16.31l-.94-2zm3 16a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm10 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/></svg>
             <span id="cart-count" class="cart-count">0</span>
           </a>
@@ -73,6 +75,7 @@
             </div>
           </div>
           -->
+        </div>
       </div>
     </section>
   </main>
