--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -33,7 +33,9 @@
       </nav>
       <div class="brand-banner">
         <div class="brand-center">
-          <img src="../images/logo.png" alt="Robyn & Gold" />
+          <a href="../index.html">
+            <img src="../images/logo.png" alt="Robyn & Gold" />
+          </a>
           <a href="../index.html" class="brand-main">Robyn &amp; Gold</a>
           <span class="brand-tagline">Antique Jewellery</span>
         </div>
@@ -199,7 +201,6 @@
           : `€${product.price}`;
         
         const productLink = `product-detail.html?slug=${product.slug}`;
-        console.log('Creating product card for:', product.name, 'with link:', productLink);
           
         return `
         <article class="product-card">
