--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -42,7 +42,7 @@
 
       <nav class="nav nav-right" aria-label="Utilities">
         <a href="/pages/cart.html" class="nav-link nav-link--cart" aria-label="Cart">
-          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-cart"><path d="M7 4h-2l-1 2h-2v2h2l3.6 7.59-1.35 2.44c-.16 .28-.25 .61-.25 .97 0 1.1.9 2 2 2h12v-2h-11.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.74c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14 .12-.31 .12-.48 0-.55-.45-1-1-1h-16.31l-.94-2zm3 16a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm10 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/></svg>
+          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-cart"><path d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 01-8 0"/></svg>
           <span id="cart-count" class="cart-count">0</span>
         </a>
       </nav>
