--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -43,7 +43,7 @@
 
       <nav class="nav nav-right" aria-label="Utilities">
         <a href="cart.html" class="nav-link nav-link--cart" aria-label="Cart">
-          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-cart"><path d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 01-8 0"/></svg>
+          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-cart"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 001.98 1.61h9.72a2 2 0 001.98-1.61L23 6H6"/></svg>
           <span id="cart-count" class="cart-count">0</span>
         </a>
       </nav>
