--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,12 @@
             passing on.
           </p>
           <p>
-            Every piece is carefully assessed, lightly restored only where necessary, and photographed without filters
-            so you can see what we see: patina, character and that elusive, old-world sparkle.
+            Every piece is carefully assessed and photographed without filters so you can see what we see: patina,
+            character and that elusive, old-world sparkle.
+          </p>
+          <p>
+            Before being listed, each piece is checked, cleaned, polished and brought back to life by a professional
+            goldsmith — so it arrives ready to wear, exactly as it appears.
           </p>
         </div>
         <div class="two-column-block two-column-block--border">
